Added validation for sortDirection

--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -20,6 +20,7 @@ NUMERIC_VALUE_POSITIVE_OR_ZERO = Value should be positive or zero
 FIELD_NOT_NULL = Value can not be null
 FIELD_NOT_BLANK = Value can not be null or blank
 STRING_MAXIMUM_LENGTH = Maximum characters accepted is {max}
+STRING_SORT_DIRECTION_VALUE = "Sort direction must be 'asc', 'desc', or empty"
 
 # MANUAL VALIDATION ERRORS
 LIST_NOT_EMPTY = List must not be empty
