--- a/shared/src/main/resources/messages_es.properties
+++ b/shared/src/main/resources/messages_es.properties
@@ -20,6 +20,7 @@ NUMERIC_VALUE_POSITIVE_OR_ZERO = El valor debe ser positivo o cero
 FIELD_NOT_NULL = El valor no puede ser nulo
 FIELD_NOT_BLANK = El valor no puede ser nulo o vac\u00EDo
 STRING_MAXIMUM_LENGTH = El n\u00FAmero m\u00E1ximo de caracteres aceptados es {max}
+STRING_SORT_DIRECTION_VALUE = "La direcci\u00F3n de ordenaci\u00F3n debe ser 'asc', 'desc' o vac\u00EDa"
 
 # MANUAL VALIDATION ERRORS
 LIST_NOT_EMPTY = La lista no debe estar vac\u00EDa
