--- a/shared/src/main/resources/messages_it.properties
+++ b/shared/src/main/resources/messages_it.properties
@@ -20,6 +20,7 @@ NUMERIC_VALUE_POSITIVE_OR_ZERO = Il valore deve essere positivo o pari a zero
 FIELD_NOT_NULL = Il valore non pu\u00F2 essere nullo
 FIELD_NOT_BLANK = Il valore non pu\u00F2 essere nullo o vuoto
 STRING_MAXIMUM_LENGTH = Il numero massimo di caratteri accettati \u00E8 {max}
+STRING_SORT_DIRECTION_VALUE = "La direzione di ordinamento deve essere 'asc', 'desc' o vuota"
 
 # MANUAL VALIDATION ERRORS
 LIST_NOT_EMPTY = La lista non deve essere vuota
