--- a/shared/src/main/resources/messages_ro.properties
+++ b/shared/src/main/resources/messages_ro.properties
@@ -20,6 +20,7 @@ NUMERIC_VALUE_POSITIVE_OR_ZERO = Valoarea trebuie s\u0103 fie pozitiv\u0103 sau 
 FIELD_NOT_NULL = Valoarea nu poate fi nul\u0103
 FIELD_NOT_BLANK = Valoarea nu poate fi nul\u0103 sau goal\u0103
 STRING_MAXIMUM_LENGTH = Num\u0103rul maxim de caractere acceptate este {max}
+STRING_SORT_DIRECTION_VALUE = "Direc\u021Bia de sortare trebuie s\u0103 fie 'asc', 'desc' sau goal\u0103"
 
 # MANUAL VALIDATION ERRORS
 LIST_NOT_EMPTY = Lista nu trebuie s\u0103 fie goal\u0103
