--- a/shared/src/main/resources/messages_sl.properties
+++ b/shared/src/main/resources/messages_sl.properties
@@ -20,6 +20,7 @@ NUMERIC_VALUE_POSITIVE_OR_ZERO = Vrednost mora biti pozitivna ali enaka ni\u010D
 FIELD_NOT_NULL = Vrednost ne sme biti ni\u010Delna
 FIELD_NOT_BLANK = Vrednost ne sme biti ni\u010D ali prazna
 STRING_MAXIMUM_LENGTH= Najve\u010Dje \u0161tevilo dovoljenih znakov je {max}
+STRING_SORT_DIRECTION_VALUE = "Smer razvr\u0161\u010Danja mora biti 'asc', 'desc' ali prazno"
 
 # MANUAL VALIDATION ERRORS
 LIST_NOT_EMPTY = Seznam ne sme biti prazen
