Add size limit validation for loadMany

--- a/shared/src/main/resources/messages.properties
+++ b/shared/src/main/resources/messages.properties
@@ -24,6 +24,7 @@ STRING_SORT_DIRECTION_VALUE = "Sort direction must be 'asc', 'desc', or empty"
 
 # MANUAL VALIDATION ERRORS
 LIST_NOT_EMPTY = List must not be empty
+LIST_MAX_SIZE = Maximum number of allowed parameters is {max}
 SERIAL_NUMBERS_NOT_FOUND = No products found for the serial numbers {0}
 
 # PRODUCT ERRORS
