--- a/shared/src/main/resources/messages_es.properties
+++ b/shared/src/main/resources/messages_es.properties
@@ -24,6 +24,7 @@ STRING_SORT_DIRECTION_VALUE = "La direcci\u00F3n de ordenaci\u00F3n debe ser 'as
 
 # MANUAL VALIDATION ERRORS
 LIST_NOT_EMPTY = La lista no debe estar vac\u00EDa
+LIST_MAX_SIZE = El n\u00FAmero m\u00E1ximo de par\u00E1metros permitidos es {max}
 SERIAL_NUMBERS_NOT_FOUND = No se encontraron productos para los n\u00FAmeros de serie {0}
 
 # PRODUCT ERRORS
