--- a/shared/src/main/resources/messages_sl.properties
+++ b/shared/src/main/resources/messages_sl.properties
@@ -24,6 +24,7 @@ STRING_SORT_DIRECTION_VALUE = "Smer razvr\u0161\u010Danja mora biti 'asc', 'desc
 
 # MANUAL VALIDATION ERRORS
 LIST_NOT_EMPTY = Seznam ne sme biti prazen
+LIST_MAX_SIZE = Najve\u010Dje dovoljeno \u0161tevilo parametrov je {max}
 SERIAL_NUMBERS_NOT_FOUND = Za serijske \u0161tevilke {0} niso bili najdeni izdelki
 
 # PRODUCT ERRORS
