--- a/shared/src/main/resources/messages_it.properties
+++ b/shared/src/main/resources/messages_it.properties
@@ -24,6 +24,7 @@ STRING_SORT_DIRECTION_VALUE = "La direzione di ordinamento deve essere 'asc', 'd
 
 # MANUAL VALIDATION ERRORS
 LIST_NOT_EMPTY = La lista non deve essere vuota
+LIST_MAX_SIZE = Il numero massimo di parametri consentiti \u00E8 {max}
 SERIAL_NUMBERS_NOT_FOUND = Nessun prodotto trovato per i numeri di serie {0}
 
 # PRODUCT ERRORS
