--- a/shared/src/main/resources/messages_ro.properties
+++ b/shared/src/main/resources/messages_ro.properties
@@ -24,6 +24,7 @@ STRING_SORT_DIRECTION_VALUE = "Direc\u021Bia de sortare trebuie s\u0103 fie 'asc
 
 # MANUAL VALIDATION ERRORS
 LIST_NOT_EMPTY = Lista nu trebuie s\u0103 fie goal\u0103
+LIST_MAX_SIZE = Num\u0103rul maxim de parametri permi\u0219i este {max}
 SERIAL_NUMBERS_NOT_FOUND = Nu s-au g\u0103sit produse pentru seriile {0}
 
 # PRODUCT ERRORS
